# My-CLI-App

./: .gitignore  AGENTS.md  LIVE_CODEX_PROGRESS_GUI_UPDATE_PLAN.md  PERSONAL_TWO_PC_RELEASE_PLAN.md  PHASE0_SECURITY_BASELINE_2026-07-13.md  PHASE1_LOCAL_STORE.md  PHASE2_APPEND_ONLY_SYNC.md  PHASE7_RELEASE_INSTALLATION.md  PLAN.md  README.md  SECURITY_SYNC_AUDIT_AND_IMPLEMENTATION_PLAN.md  app.js  index.html  package-lock.json  package.json  styles.css
scripts/: app_server_smoke.cjs  release_check.cjs  release_verify.cjs
src/: App.tsx  chatTimeline.ts  conversationScope.ts  messageIdentity.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/proptest-regressions/: sync.txt
src-tauri/src/: codex.rs  lib.rs  main.rs  migration.rs  store.rs  sync.rs
tests/: chatTimeline.test.ts  conversationScope.test.ts  messageIdentity.test.ts
