[package]
name = "min"
version = "0.1.0"
description = "A compact local AI workspace"
authors = ["danis"]
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "min_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dev-dependencies]
proptest = "1.6"

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.37", features = ["bundled"] }
sha2 = "0.10"
hex = "0.4"
uuid = { version = "1", features = ["v4", "v5"] }
